--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Web App Builder</title>
+    <link href="../src/app.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>TypeScript + React</title>
-  <link href="../src/app.css" rel="stylesheet" />
-</head>
-
-<body>
-  <div id="root"></div>
-  <script src="./assets/bundle.js"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script src="./assets/bundle.js"></script>
+  </body>
 </html>
