--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
   <body>
     <div id="root"></div>
-    <script src="./assets/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
