--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Web App Builder</title>
-    <link href="../src/app.css" rel="stylesheet" />
+    <title>Friendly-Engine</title>
   </head>
 
   <body>
